make a singleton ChromeDataUseMeasurement for network service

When network service is enabled, it is possible for ServiceManager
to launch network service without the browser process. This will cause
a crash in ChromeContentBrowserClient::OnNetworkServiceDataUseUpdate().
This CL fixes the issue by making ChromeDataUsemeasurement a singleton
for network service. Also it fixes a bunch of BrowserThread checks
as BrowserThread will not be available when browser process isn't created.

BUG=898970

Change-Id: I8638239c62a852374f52d5832d86558f4c4bef19
Reviewed-on: https://chromium-review.googlesource.com/c/1303180
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: rajendrant <rajendrant@chromium.org>
Commit-Queue: Min Qin <qinmin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603960}
Former-commit-id: cafb27b389ecebb9e35851d957679954c003c25c